Preparations, install webpack and plugin to run local server and scripts

--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "Simple Popup ",
   "main": "index.js",
   "directories": {
-    "doc": "doc"
+    "doc": "src/doc"
   },
   "scripts": {
-    "start": "npm run dev"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open"
   },
   "author": "Arthur",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.5.2",
+    "html-webpack-plugin": "^4.2.0",
+    "style-loader": "^1.1.4",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
